static/style.css
.bd-callout-info {
    border-left-color: #5bc0de;
}

.bd-callout {
    padding: 1.25rem;
    margin-top: 1.25rem;
    margin-bottom: 1.25rem;
    border: 1px solid #e9ecef;
    border-left-width: .25rem;
    border-radius: .25rem;
}

.bd-callout-danger {
    border-left-color: #d9534f;
}

